<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instrument" />

        <TextView
            android:id="@+id/selectedDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_days" />

        <TextView
            android:id="@+id/selectedTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_times" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/confirmedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_status" />

        <Button
            android:id="@+id/btnDeny"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/delete"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
