<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/baseline_person_24"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFirstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/buttonDeleteProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/delete_profile" />

    <TextView
        android:id="@+id/helpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDeleteProfile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="191dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="7dp"
        android:text="@string/help"
        android:textColor="@drawable/common_google_signin_btn_icon_light"/>
</RelativeLayout>
